Bug 491993 - KDEFrameworksIntegration: First start of Falkon after compilation and installation: "custom scheme(s) ... will be available after browser restart" and other errors
Summary: KDEFrameworksIntegration: First start of Falkon after compilation and install...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.07.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-21 16:16 UTC by Jens Radloff
Modified: 2024-08-22 19:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Radloff 2024-08-21 16:16:08 UTC
Note: This bug report relates to Falkon compiled and installed in Tuxedo OS version 3.

SUMMARY:

First start of Falkon after compilation and installation results in the following debug code on the console:

<User name>@<Hostname>:~$ falkon
Falkon: Creating new profile directory
Error creating database schema "Kein Abfrage Der Datensatz konnte nicht abgeholt werden"
Path override failed for key base::DIR_APP_DICTIONARIES and path '/opt/falkon/falkon/bin/falkon/bin/qtwebengine_dictionaries'
Path override failed for key base::DIR_APP_DICTIONARIES and path '/usr/lib/qt6/libexec/qtwebengine_dictionaries'
Path override failed for key base::DIR_APP_DICTIONARIES and path '/usr/lib/qt6/libexec/qtwebengine_dictionaries'
Cannot load theme  "linux"
"KDEFrameworksIntegration: Custom scheme 'desktop' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'recentlyused' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'xz' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'timeline' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'lzma' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'man' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'zeroconf' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'smb' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'bluetooth' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'sevenz' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'tags' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'webdavs' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'baloosearch' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'zip' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'bup' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'tar' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'mtp' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'applications' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'thumbnail' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'programs' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'ghelp' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'fish' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'camera' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'sftp' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'cifs' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'kdeconnect' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'bzip2' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'activities' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'remote' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'help' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'trash' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'zstd' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'bzip' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'obexftp' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'afc' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'filenamesearch' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'ar' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'webdav' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'info' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'gzip' will be available after browser restart."
"KDEFrameworksIntegration: Custom scheme 'fonts' will be available after browser restart."
Falkon: 2 extensions loaded
MESA-INTEL: warning: Ivy Bridge Vulkan support is incomplete
libva error: /usr/lib/x86_64-linux-gnu/dri/iHD_drv_video.so init failed
^C
<User name>@<Hostname>:~$

2. Start of Falkon:

<User name>@<Hostname>:~$ falkon
Path override failed for key base::DIR_APP_DICTIONARIES and path '/opt/falkon/falkon/bin/falkon/bin/qtwebengine_dictionaries'
Path override failed for key base::DIR_APP_DICTIONARIES and path '/usr/lib/qt6/libexec/qtwebengine_dictionaries'
Path override failed for key base::DIR_APP_DICTIONARIES and path '/usr/lib/qt6/libexec/qtwebengine_dictionaries'
MESA-INTEL: warning: Ivy Bridge Vulkan support is incomplete
libva error: /usr/lib/x86_64-linux-gnu/dri/iHD_drv_video.so init failed
Cannot load theme  "linux"
Falkon: 2 extensions loaded
<User name>@<Hostname>:~$

STEPS TO REPRODUCE
1. Compile and install Falkon source code with the following cmake flags:

$ cmake .. --fresh --install-prefix=$FALKON_PATH_IN_OPT -D BUILD_PYTHON_SUPPORT=ON -DCMAKE_BUILD_TYPE=Debug -Wno-dev \
        -D CMAKE_PREFIX_PATH=/opt/ki18n/ki18n/bin/lib/x86_64-linux-gnu/cmake/KF6I18n \
        -D CMAKE_MODULE_PATH=/usr/lib/x86_64-linux-gnu/cmake/Qt6:/usr/lib/x86_64-linux-gnu/qt6/qml/org/kde/i18n/localeData  \
        -D INCLUDE_DIRECTORIES=/opt/ki18n/ki18n/bin/include/KF6 \
        -D KF6Wallet_DIR=/usr/lib/x86_64-linux-gnu \
        -D KF6KIO_DIR=/usr/lib/x86_64-linux-gnu \
        -D KF6Crash_DIR=/usr/lib/x86_64-linux-gnu \
        -D KF6Purpose_DIR= /usr/lib/x86_64-linux-gnu \
        -D KF6JobWidgets_DIR=/usr/lib/x86_64-linux-gnu \
        -D Qt6LinguistTools_DIR=/opt/pip/virtual_environment_1/bin


2.  Start Falkon in the console using the comand "falkon"


OBSERVED RESULT

See above

EXPECTED RESULT

No error messages as reported above at first start and all other following starts of Falkon.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Tuxedo OS 3 
KDE Plasma Version: KDE Plasma 6
KDE Frameworks Version:  0.3.0
Qt Version: 6.7.0
Comment 1 Jens Radloff 2024-08-21 16:48:14 UTC
The second part in the above-mentioned line 

"Error creating database schema "Kein Abfrage Der Datensatz konnte nicht abgeholt werden"

means in English:

Error creating database schema "No retrieval: Respective data set could not be fetched."
Comment 2 Juraj 2024-08-22 17:10:02 UTC
Hello,

> Error creating database schema "Kein Abfrage Der Datensatz konnte nicht abgeholt werden"

This only happens at profile creation, and if I remember was there for a long time.
It might be worth taking a look at.
Seems like the initial payload for the database fails? (but everything still works?)


> "KDEFrameworksIntegration: Custom scheme 'desktop' will be available after browser restart."

and all others are there due to QtWebEngine limitation, when all custom schemes need to be registered before it starts.
There was an added feature to register custom schemes, there is even GUI in preferences for it [Preferences > Other >Custom Scheme Manager].
The KDE plugin, since it contains the KIO (broken since it faked the support) at start registers the available schemes and prints to the terminal logs about it.


> Path override failed for key base::DIR_APP_DICTIONARIES ...

This showed up recently, I did not investigate it yet.


> MESA-INTEL: warning: Ivy Bridge Vulkan support is incomplete
> libva error: /usr/lib/x86_64-linux-gnu/dri/iHD_drv_video.so init failed

This has to be from your system configuration.


> Cannot load theme  "linux"

You might have installed Falkon to a place where the environmental variables when running Falkon do not point.
Comment 3 Juraj 2024-08-22 18:15:45 UTC
Hello again,

After an investigation, the
> Error creating database schema "Kein Abfrage Der Datensatz konnte nicht abgeholt werden"
Is not an error as something bad, since it is showsn because the default sql contain an empty comment at the end of the file and it is evaluated as nothing to do for the database.
So it throw this weird sounding error somewhere along the call.

I will try to get something to bypass cases like this.
Comment 4 Juraj 2024-08-22 19:45:49 UTC
Git commit 0c67d1e0c87d8cb63877463834eac9722ff6c296 by Juraj Oravec.
Committed on 22/08/2024 at 19:42.
Pushed by jurajo into branch 'master'.

ProfileManager: Skip clear comment SQL statements

Qt throws errors when the SQL command does nothing.
FIXED-IN: 24.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +4    -0    src/lib/app/profilemanager.cpp

https://invent.kde.org/network/falkon/-/commit/0c67d1e0c87d8cb63877463834eac9722ff6c296