ProfileManager: Skip clear comment SQL statements

Qt throws errors when the SQL command does nothing.

BUG: 491993
FIXED-IN: 24.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>